CMAKE_MINIMUM_REQUIRED(VERSION 3.11)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_COMPILER /usr/bin/g++)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fexec-charset=UTF-8")
PROJECT(TicketSystem)
INCLUDE_DIRECTORIES(./src)
INCLUDE_DIRECTORIES(./lib)
ADD_EXECUTABLE(code ./src/UserSystem.cpp ./src/TrainSystem.cpp ./src/TicketSystem.cpp ./src/main.cpp)
